--- a/gb/24/2/26/n14189924.md
+++ b/gb/24/2/26/n14189924.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>安省高校将获拨款13亿 3年停涨本省学生学费</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14189930-CP170120929-600x400.jpg" />
 <h6>安省学院和大学厅长邓洛普2024年2月26日在女王公园（省府所在地）召开新闻发布会，她宣布，安省政府将在3年内向高校拨款13亿元。（Arlyn McAdorey/加通社）
 </h6>
 <hr>
-<p>【大纪元2024年02月27日讯】（大纪元记者楚方明多伦多报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%A6%E9%99%A2.md#1">学院</a>和<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>厅（简称高校厅）厅长周一（2月26日）表示，安省政府将在3年内向高校<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8B%A8%E6%AC%BE.md#1">拨款</a>13亿元，用于稳定安省公立高等教育机构，但这些高校至少在3年内不得涨本省学生的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%A6%E8%B4%B9.md#1">学费</a>；高校可以向外省加拿大学生学费，涨幅最高为5%；同时，高校厅长还宣布一项立法，要求各院校向学生提供更多的上学费用信息。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81.md#1">安省</a>高校厅长邓洛普（Jill Dunlop）周一表示，省府将在3年内<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8B%A8%E6%AC%BE.md#1">拨款</a>9.03亿元，用于新的高等教育可持续发展基金，其中一些资金将拨给最缺资金的院校；其余拨款将用于现金资助、一些STEM项目（科学、技术、工程和数学）花费、研究和创新项目以及其它举措。</p>
-<p>据加通社报导，邓洛普周一还表示，自2019年以来的停涨<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%A6%E8%B4%B9.md#1">学费</a>，将至少持续到2026-27年，即下一次省选这年。</p>
+<p>【大纪元2024年02月27日讯】（大纪元记者楚方明多伦多报导）安省学院和大学厅（简称高校厅）厅长周一（2月26日）表示，安省政府将在3年内向高校拨款13亿元，用于稳定安省公立高等教育机构，但这些高校至少在3年内不得涨本省学生的学费；高校可以涨外省加拿大学生学费，涨幅最高为5%；同时，高校厅长还宣布一项立法，要求各院校向学生提供更多的上学费用信息。</p>
+<p>安省高校厅长邓洛普（Jill Dunlop）周一表示，省府将在3年内拨款9.03亿元，用于新的高等教育可持续发展基金，其中一些资金将拨给最缺资金的院校；其余拨款将用于现金资助、一些STEM项目（科学、技术、工程和数学）花费、研究和创新项目以及其它举措。</p>
+<p>据加通社报导，邓洛普周一还表示，自2019年以来的停涨学费，将至少持续到2026-27年，即下一次省选这年。</p>
 <h2>具体资金分配</h2>
 <p>-安省周一公布的向高校拨款13亿元，约9.03亿元，将在3年内拨给高校；其中大约7亿元将用于广泛的基础支持，2.03亿元将用于需要更多资金的院校。省府表示，院校的地理位置、总入学率以及依赖国际学生入学率等因素，都将会考虑在内。</p>
-<p>-省府还将另外将提供1.673亿元用于高校的基本维修和设备。</p>
+<p>-省府还将另外提供1.673亿元用于高校的基本维修和设备。</p>
 <p>-额外提供1,000万元的一次性资金，用于小额、北部和农村学生津贴。</p>
 <p>-在3年内投入1,500万元用于支持第三方审查，以节省开支。</p>
 <p>-1亿元用于STEM项目支持。</p>
 <p>-6,500万元用于支持研究和创新。</p>
 <p>-2,300万元用于加强学生心理健康支持。</p>
-<p>省府表示，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A7%E5%AD%A6.md#1">大学</a>生学费在2019年减少了10%，为学生和家长每年节省了大约1,600元的大学学费，估计每年为大学节省了350元。</p>
+<p>省府表示，大学生学费在2019年减少了10%，为学生和家长平均每年节省了大学学费约1,600元，节省了学院学费约350元。</p>
 <h2>涨省外学生学费5%</h2>
 <p>安省政府周一还宣布，2024-2025年，高校可以向外省或居住在安省以外的加拿大学生涨学费，涨幅最高可达5%。</p>
 <h2>安省新立法</h2>
@@ -25,7 +25,7 @@
 <p>安省政府周一公布一项新立法——《加强问责制和学生支持法案》。以下是该立法的主要内容:</p>
 <p>省府希望，学生教科书和其它学习材料的费用以及其它辅助费用透明化。省府提供的例子是，在课程大纲中公布这些上学成本。</p>
 <p>安省还将就建立“学费透明制”进行咨询，以便民众更好地了解这笔钱是如何使用的。</p>
-<p>政府将要求<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%A6%E9%99%A2.md#1">学院</a>和大学制定与心理健康相关的政策，以及反对种族主义和仇恨，包括但不限于反犹太主义和伊斯兰恐惧症的政策。省高校厅表示，将在晚些时候发布进一步的政策说明，说明这些政策应该包括哪些内容。</p>
+<p>政府将要求学院和大学制定与心理健康相关的政策，以及反对种族主义和仇恨，包括但不限于反犹太主义和伊斯兰恐惧症的政策。省高校厅表示，将在晚些时候发布进一步的政策说明，说明这些政策应该包括哪些内容。</p>
 <h2>允许学院提供应用硕士学位</h2>
 <p>该法案还将允许学院提供应用硕士学位。</p>
 <p>作为帮助学生就业措施的一部分，省将推出一个就业门户网站，以帮助学生了解劳动力市场需求。</p>
@@ -34,7 +34,7 @@
 <p>高等教育战略协会（Higher Education Strategy Associates）去年的一份报告显示，安省对高等教育机构的资助“糟透了”，省府要把拨款提高到其它9个省的平均水平，安省每年将需要拨出71亿元的额外资金，远高于目前拨出的约50亿元的高校运营资金水平。</p>
 <p>去年11月发布的一份政府委托报告称，省府对高校的资助水平低，加上2019年的学费削减和停涨学费，严重威胁到高校行业财务的可持续性。</p>
 <p>在该报告中，专家曾建议，省府给各高校的拨款，可按每名学生资助金额增长10%，一次性拨出，然后在随后的几年中，拨款增幅随着通货膨胀率增长，同时将学费提高5%，再同样幅度地增加学生援助金。</p>
-<p>安省高校最近表示，联邦政府今年早些时候宣布，国际本科生的签证数量将被大幅削减，安省的配额减少了一半，这使得他们的处境更加严峻。</p>
+<p>安省高校最近表示，联邦政府今年早些时候宣布，国际本科生的学生签证数量将被大幅削减，安省的配额减少了一半，这使得他们的处境更加严峻。</p>
 <h2>高校依赖于留学生学费</h2>
 <p>安省政府资助高校资金少，导致各高校越来越依赖于留学生的学费，而留学生的学费比加拿大学生的学费高得多。</p>
 <p>安省审计长在2022年的一份报告中表示，2020-21学年，加拿大国内本科生的平均学费为7,938元，国际本科生的平均学费为40,525元。</p>
@@ -42,41 +42,41 @@
 <p>安省政府委托所做的高等教育财务报告显示，安省高校现在以国际学生的学费为生存基础，极大增加了高校的财务风险。</p>
 <p>责任编辑：文芳</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/9/18/n3028385.md#1">加拿大高校学费涨4% 留学生增幅更大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/3/4/n3814406.md#1">魁北克高教峰会达成协议 学费每年涨3%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171440.md#1">福特：不想涨安省高校学费 应提高效率</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189907.md#1">多伦多本周大部分时间气温温和 周四降温</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189898.md#1">试图逮捕汽车盗贼 米尔顿警察被车拖行50米</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189121.md#1">女子钢架雪车世锦赛 加国19岁选手成最年轻冠军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189425.md#1">约克大学三千教职工周一可能罢工</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189078.md#1">结肠癌患者年轻化 安省人望降低筛检年龄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189088.md#1">3月1日起 多伦多餐馆不再提供塑料餐具 除非要求</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14189042.md#1">安省大学陷财困 福特狠批特鲁多政府</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/9/18/n3028385.md#1">加拿大高校学费涨4% 留学生增幅更大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/3/4/n3814406.md#1">魁北克高教峰会达成协议 学费每年涨3%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/1/n14171440.md#1">福特：不想涨安省高校学费 应提高效率</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346041.md#1">后院建溜冰场惹祸 万锦业主被令拆除不服</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345995.md#1">客人因贩毒被捕 多伦多短租业主损失4万元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345978.md#1">中国国殇日 陈国治赞扬中共统治引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345974.md#1">城市惊魂：多伦多的路怒追逐与枪击事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345953.md#1">多伦多气温开始入秋 天气逐渐变凉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345928.md#1">罕见天气现象 安省部分地区出现波浪云</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345931.md#1">数据：加拿大汽车盗窃有所收敛 仍很猖獗</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/21/n10925502.md#1" target="_blank">林辉：满清最后一位格格坐了十五年冤狱</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/11/27/n8533521.md#1" target="_blank">勤修炼 英文老师丢了药罐子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/11/n9947822.md#1" target="_blank">文革中自杀的几个名人（2）文联主席老舍</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184085.md#1">龙的奇应：汉代玉笥山民见神迹 唐玄宗与龙几度奇遇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185106.md#1">认识元宵节和“元宵”七道题 你答对多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184470.md#1">【未解之谜】南京风水探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14184909.md#1">众里寻他千百度 元宵情诗伴花灯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14184786.md#1">元宵猜灯谜：100题汉字和成语灯谜 体验传统游艺文化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14188456.md#1">【时事金扫描】苏州罕见雷打雪 百辆汽车相撞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189169.md#1">【周末大V谈】“新冷战”开打？美中全面对抗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188199.md#1">【时事金扫描】俄乌战两周年 泽连斯基神秘采访</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187625.md#1">专家：去Costco买7种日用品 不买电视</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188373.md#1">7种热门副业可在家赚钱 有些时薪达100美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187797.md#1">【菁英论坛】揭上市密法：包养女明星钓副国级</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14187643.md#1">《“鬼灭之刃”绊之奇迹，迈向柱训练》影评：有效改正问题的诚意续作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187670.md#1">郑爽所持百万股权被续行冻结 现状令人唏嘘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188312.md#1">张学友上海巡演险陷假唱 中断表演获大赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188368.md#1">拒签“中国台湾”承诺书？吴沐玹新戏传遭禁播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189229.md#1">《惊奇队长》演员肯内特?米歇尔骤逝 终年49岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：系上鞋带 我们一起去郊游</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/21/n14185424.md#1">活着就能存钱 5观念找到储蓄诀窍（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/22/n14186164.md#1">活着就能存钱 5观念找到储蓄诀窍（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/22/n14186918.md#1">台湾企业家患恶性肿瘤 奇迹反转令医生惊叹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/14/n14181026.md#1">4个坏习惯很伤肾 中医：护肾长寿有3招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342225.md#1">《对我而言，你是珍贵的》：家之所以为家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345929.md#1">【时事金扫描】针对中共 美军两大台海密战计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343377.md#1">【环球直击】哈马斯袭击以色列一周年 各地悼念</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345153.md#1">【百年真相】最得宋庆龄信任 此人为何寻短见？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344939.md#1">若有1000美元闲钱 八项明智的理财生财之道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344719.md#1">副歌交由现场观众合唱 李玉刚遭疑“躲高音”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339916.md#1">拉筋强肌助眠 改善健康 踮脚尖五好处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/26/n14189924.htm">安省高校将获拨款13亿 3年停涨本省学生学费</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189924.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/26/n14189924.htm">安省高校将获拨款13亿 3年停涨本省学生学费</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/26/n14189924.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
